# interpretable-sla

./: .gitignore  README.md  pyproject.toml
datasets/: 1_original_question_set.parquet  2_direct_scoring_with_rubric.parquet  3_rubric_based_questions.parquet  4_rubric_based_questions_batch.parquet  5_revised_question_set.parquet  6_revised_question_set_batch.parquet  7_qwen_2_5_omni_embeddings.parquet
notebooks/: comparison_of_models.ipynb  comparison_of_question_sets.ipynb  comparison_of_transformations.ipynb  interpretability_analysis.ipynb  low_data_regime.ipynb  question_scores.ipynb  visual_inspection.ipynb
report/: project_report - pg.aux  project_report - pg.bbl  project_report - pg.blg  project_report - pg.fdb_latexmk  project_report - pg.fls  project_report - pg.out  project_report - pg.tex  project_report - pg.toc  references.bib
source/: fit_predict_score_utils.py
